# syn-prelude

./: .gitignore  Cargo.toml
src/: amend_syn_error.rs  fork.rs  lib.rs  parse_as_ident.rs  parse_as_litstr.rs  parse_terminate_until.rs  path_helpers.rs  to_expr.rs  to_ident.rs  to_litstr.rs  to_span.rs  to_syn_error.rs  try_parse_as_ident.rs  try_parse_one_of_idents.rs  try_parse_tokens.rs  with_prefix.rs  with_suffix.rs
syn-prelude-macros/: Cargo.toml
syn-prelude-macros/src/: common.rs  lib.rs  match_keyword_cases.rs  path_helpers.rs  peek_keyword_in_condition.rs  repeat_keyword_lit_and_types.rs  repeat_tuples_for_try_parse_multi_idents.rs  span_tuples_to_span.rs  to_span.rs  try_parse_one_of_idents.rs
