[package]
name = "syn-prelude"
version = "0.1.6"
edition = "2021"
description = "prelude traits and helpers for enhancing 'syn'/'proc-macro2' lib"
license = "MIT"
documentation = "https://docs.rs/syn-prelude"
homepage = "https://github.com/powermacros/syn-prelude"
repository = "https://github.com/powermacros/syn-prelude"

[lib]
name = "syn_prelude"
path = "src/lib.rs"

[workspace]
resolver = "2"
members = ["syn-prelude-macros"]

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = { version = "1" }
convert_case = "0.6"
syn-prelude-macros = { version = "0.1.1" }
