[package]
name = "syn-prelude-macros"
version = "0.1.0"
edition = "2021"
description = "proc macros for syn-prelude"
license = "MIT"
documentation = "https://docs.rs/syn-prelude-macros"
homepage = "https://github.com/powermacros/syn-prelude"
repository = "https://github.com/powermacros/syn-prelude"

[lib]
name = "syn_prelude_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = { version = "1" }
proc-macro2 = { version = "1", features = ["span-locations"] }
convert_case = "0.6"
